# proxynexus-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  collection_csv_builder.py
.github/workflows/: rust.yml
proxynexus-cli/: Cargo.toml
proxynexus-cli/src/: main.rs
proxynexus-core/: Cargo.toml
proxynexus-core/data/: netrunnerdb_cards.json
proxynexus-core/src/: border_generator.rs  card_query.rs  card_source.rs  card_store.rs  catalog.rs  collection.rs  collection_builder.rs  collection_manager.rs  csv_parser.rs  db_schema.rs  db_storage.rs  image_provider.rs  image_scanner.rs  lib.rs  models.rs  mpc.rs  netrunnerdb.rs  pdf.rs  query.rs
proxynexus-core/src/db/: app_schema.rs  collection_schema.rs
proxynexus-gui/: Cargo.toml  Dioxus.toml
proxynexus-gui/assets/: main.css  tailwind.css
proxynexus-gui/public/: init.sql
proxynexus-gui/src/: analytics.rs  export.rs  main.rs
proxynexus-gui/src/components/: card_input.rs  export_controls.rs  mod.rs  preview_grid.rs  source_selector.rs  variant_selector.rs
