[package]
name = "proxynexus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
krilla = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
walkdir = "2.5.0"
csv = "1.4.0"
chrono = "0.4.43"
zip = "8.0.0"
toml = "1.0.1"
dirs = "6.0.0"
tempfile = "3.24.0"
opencv = "0.98.1"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
