[package]
name = "proxynexus-gui"
version = "0.1.0"
authors = ["Alex McCulloch <alexmccx@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-logger = "0.7.3"
getrandom = { version = "0.2", features = ["js"] }
gluesql = { version = "0.19.0", default-features = false, features = ["gluesql_memory_storage"] }
tracing = "0.1.44"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
