[package]
name = "proxynexus-gui"
version = "0.1.0"
authors = ["Alex McCulloch <alexmccx@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1" }
dioxus-logger = "0.7.3"
tracing = "0.1.44"
proxynexus-core = { path = "../proxynexus-core" }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0.0"

[target.wasm32-unknown-unknown.dependencies]
gloo-net = "0.6.0"
