[package]
name = "proxynexus-gui"
version = "0.1.0"
authors = ["Alex McCulloch <alexmccx@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1" }
dioxus-logger = "0.7.3"
tracing = "0.1.44"
proxynexus-core = { path = "../proxynexus-core" }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0.0"
tokio = { version = "1.37.0", features = ["time"] }
rfd = "0.17.2"

[target.wasm32-unknown-unknown.dependencies]
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"

[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "0.3.69"
features = [
  "Blob",
  "BlobPropertyBag",
  "Document",
  "HtmlElement",
  "Url",
  "Window",
]
